# ddnsmapi

./: .gitignore  Dockerfile  README.md  ddnsmapi.service  pyproject.toml
ddnsmapi/: __init__.py
static/: index.html
tests/: kfake.sh  server-ubuntu.yaml  server.yaml
tests/knot/etc/knot/: knot-ddnsm.conf
tests/knot/var/lib/knot/: d.elfove.cz.zone  d.taaa.eu.zone
